# StatisticsMicroservice

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  yoyo.ini
StatisticsMicroservice/app/api/: exc_handlers.py
StatisticsMicroservice/app/api/routers/: statistics.py
StatisticsMicroservice/app/core/abstractions/: statistics_repository.py  transaction_manager.py
StatisticsMicroservice/app/core/dto/: statistics.py
StatisticsMicroservice/app/core/entities/: statistics.py
StatisticsMicroservice/app/core/exceptions/: statistics_validation.py
StatisticsMicroservice/app/core/use_cases/: delete_all_saved_statistics.py  read_statistics.py  save_statistics.py
StatisticsMicroservice/app/entrypoint/: api.py  config.py  di.py
StatisticsMicroservice/app/infrastructure/persistence/: statistics_repository.py  transaction_manager.py
StatisticsMicroservice/app/infrastructure/persistence/migrations/: 20240509_01_S3hWX-statistics-table.sql
env/: env.sh.example
scripts/: start.sh
tests/integration/api/: test_statistics_api.py
tests/unit/entities/: test_statistics_entity.py
tests/unit/use_cases/: test_delete_all_saved_statistics_use_case.py  test_read_statistics_use_case.py  test_save_statistics_use_case.py
