[project]
authors = [{name = "Alim Abrekov", email = "alimabrekov@outlook.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.7.1",
  "fastapi>=0.111.0",
  "dishka>=1.1.0",
  "uvicorn>=0.29.0",
  "yoyo-migrations>=8.2.0",
  "psycopg[binary]>=3.1.18",
]
name = "StatisticsMicroservice"
requires-python = ">=3.10.0"
version = "0.0.1"

[project.optional-dependencies]
lint = [
  "black>=24.3.0",
  "isort>=5.13.2",
  "mypy>=1.9.0",
  "flake8>=7.0.0",
  "flake8-pyproject>=1.2.3",
]
testing = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "StatisticsMicroservice"}

[tool.pytest.init_options]
filterwarnings = [
  "ignore::DeprecationWarning",
]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]

[tool.black]
line-length = 88
target-version = [
  "py310",
]

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "tests/"
python_version = "3.10"

[tool.flake8]
max-line-length = 88

[project.urls]
"Bug Tracker" = "https://github.com/Dark04072006/StatTracker/issues"
"Homepage" = "https://github.com/Dark04072006/StatTracker"
